--- a/index.html
+++ b/index.html
@@ -24,154 +24,173 @@
 		<br />
 	</div>
 	<textarea style="width: 100%; height: 200px" oninput="handleTextChange()" id="textarea"></textarea>
-	<div style="margin-top: 30px">
-		Switch Change Log:
-		<div id="events" style="border: solid 1px black; min-height: 50px"></div>
+	<div>
+		<b>Warning:</b> Use this section with care, it will trigger coils to fire, use at your own risk.<br />
+		Coil ID:<br /><input id="coilId" /><button onclick="handleTapCoilClick()">Tap Coil</button>
+		<div style="margin-top: 30px">
+			Switch Change Log:
+			<div id="events" style="border: solid 1px black; min-height: 50px"></div>
+		</div>
+		<div style="margin-top: 30px">
+			Communication Log:
+			<div id="log" style="border: solid 1px black; min-height: 50px"></div>
+		</div>
 	</div>
-	<div style="margin-top: 30px">
-		Communication Log:
-		<div id="log" style="border: solid 1px black; min-height: 50px"></div>
-	</div>
-</div>
 
-<script>
-	const usbVendorId = 11914;
-	const usbProductId = 4155;
-	const hardwareModel = 8192;
-	const requestPortDiv = document.getElementById('requestPortDiv');
-	const getChromeDiv = document.getElementById('getChromeDiv');
-	const mainDiv = document.getElementById('mainDiv');
-	const textarea = document.getElementById('textarea');
-	const events = document.getElementById('events');
-	const log = document.getElementById('log');
-	textarea.value = localStorage.getItem('text');
+	<script>
+		const usbVendorId = 11914;
+		const usbProductId = 4155;
+		const hardwareModel = 8192;
+		const requestPortDiv = document.getElementById('requestPortDiv');
+		const getChromeDiv = document.getElementById('getChromeDiv');
+		const mainDiv = document.getElementById('mainDiv');
+		const textarea = document.getElementById('textarea');
+		const events = document.getElementById('events');
+		const coilIdInput = document.getElementById('coilId');
+		const log = document.getElementById('log');
+		textarea.value = localStorage.getItem('text');
 
-	const addLog = (message) => (log.innerText += message + '\r');
-	const addEvent = (message) => (events.innerText += message + '\r');
+		const addLog = (message) => (log.innerText += message + '\r');
+		const addEvent = (message) => (events.innerText += message + '\r');
 
-	const handleTextChange = () => {
-		localStorage.setItem('text', textarea.value);
-	};
+		const handleTextChange = () => {
+			localStorage.setItem('text', textarea.value);
+		};
 
-	const requestPort = async () => {
-		// Forget all ports first so that we only have one port to deal with.
-		const ports = await navigator.serial.getPorts();
-		for (const port of ports) {
-			await port.forget();
-		}
-
-		navigator.serial
-			.requestPort({ filters: [{ usbVendorId, usbProductId }] })
-			.then(() => location.reload())
-			.catch((error) => alert(error));
-	};
-
-	if (!'serial' in navigator) {
-		getChromeDiv.style.display = 'block';
-	} else {
-		(async () => {
-			const ports = await navigator.serial.getPorts();
-			if (ports.length !== 1) {
-				requestPortDiv.style.display = 'block';
-				return;
+		const handleTapCoilClick = () => {
+			const coilId = parseInt(coilIdInput.value);
+			if (!isNaN(coilId) && coilId >= 0 && coilId <= 255) {
+				tapCoil({ coilId });
 			}
-			mainDiv.style.display = 'block';
+		};
 
-			const port = ports[0];
+		const requestPort = async () => {
+			// Forget all ports first so that we only have one port to deal with.
+			const ports = await navigator.serial.getPorts();
+			for (const port of ports) {
+				await port.forget();
+			}
 
-			await port.open({ baudRate: 921600 });
+			navigator.serial
+				.requestPort({ filters: [{ usbVendorId, usbProductId }] })
+				.then(() => location.reload())
+				.catch((error) => alert(error));
+		};
 
-			const writer = port.writable.getWriter();
-
-			// Zero padding and uppercase doesn't seem to be needed,
-			//  but it makes things match the docs and maybe easier to read in logs.
-			const toHex = (number) => {
-				const hex = number.toString(16).toUpperCase();
-				if (hex.length % 2) {
-					return '0' + hex;
+		if (!'serial' in navigator) {
+			getChromeDiv.style.display = 'block';
+		} else {
+			(async () => {
+				const ports = await navigator.serial.getPorts();
+				if (ports.length !== 1) {
+					requestPortDiv.style.display = 'block';
+					return;
 				}
-				return hex;
-			};
+				mainDiv.style.display = 'block';
 
-			const writeLine = async (args) => {
-				const { text } = args;
-				addLog('wrote: ' + text);
-				await writer.write(new TextEncoder().encode(text + '\r'));
-			};
+				const port = ports[0];
 
-			const writeCommand = async (command, ...args) => {
-				const filterUndefined = (array) => {
-					return array.filter((item) => item !== undefined);
+				await port.open({ baudRate: 921600 });
+
+				const writer = port.writable.getWriter();
+
+				// Zero padding and uppercase doesn't seem to be needed,
+				//  but it makes things match the docs and maybe easier to read in logs.
+				const toHex = (number) => {
+					const hex = number.toString(16).toUpperCase();
+					if (hex.length % 2) {
+						return '0' + hex;
+					}
+					return hex;
 				};
 
-				const text = `${command}:${filterUndefined(args)
-					.map((arg) => toHex(arg))
-					.join(',')}`;
-				await writeLine({ text });
-			};
+				const writeLine = async (args) => {
+					const { text } = args;
+					addLog('wrote: ' + text);
+					await writer.write(new TextEncoder().encode(text + '\r'));
+				};
 
-			const clear = async () => {
-				await writeLine({ text: Array(2048).fill(' ').join('') });
-			};
+				const writeCommand = async (command, ...args) => {
+					const filterUndefined = (array) => {
+						return array.filter((item) => item !== undefined);
+					};
 
-			const configureHardware = async () => {
-				await writeCommand('CH', hardwareModel, 1);
-			};
+					const text = `${command}:${filterUndefined(args)
+						.map((arg) => toHex(arg))
+						.join(',')}`;
+					await writeLine({ text });
+				};
 
-			let received = '';
-			port.readable.pipeTo(
-				new WritableStream({
-					write: (chunk) => {
-						const lines = (received + new TextDecoder().decode(chunk)).split('\r');
-						lines.forEach((line, index) => {
-							// The last part doesn't end with \r so we just save it for now.  We will process it after we get the ending \r
-							if (index === lines.length - 1) {
-								received = line;
-							} else {
-								addLog('read: ' + line);
-								if (line.startsWith('/L:') || line.startsWith('-L:')) {
-									const closed = line[0] === '-';
-									const switchId = parseInt(line.substring('/L:'.length), 16);
-									const switchInfo = (() => {
+				const clear = async () => {
+					await writeLine({ text: Array(2048).fill(' ').join('') });
+				};
+
+				const configureHardware = async () => {
+					await writeCommand('CH', hardwareModel, 1);
+				};
+
+				tapCoil = async (args) => {
+					const { coilId } = args;
+					const trigger = 0b1001001; // enabled, one-shot, manual
+					await writeCommand('WD', 500);
+					await writeCommand('DL', coilId, trigger, 0, 0x10, 150, 30, 0, 0, 0);
+				};
+
+				let received = '';
+				port.readable.pipeTo(
+					new WritableStream({
+						write: (chunk) => {
+							const lines = (received + new TextDecoder().decode(chunk)).split('\r');
+							lines.forEach((line, index) => {
+								// The last part doesn't end with \r so we just save it for now.  We will process it after we get the ending \r
+								if (index === lines.length - 1) {
+									received = line;
+								} else {
+									addLog('read: ' + line);
+									if (line.startsWith('/L:') || line.startsWith('-L:')) {
+										const closed = line[0] === '-';
+										const switchId = parseInt(line.substring('/L:'.length), 16);
+										const switchInfo = (() => {
+											try {
+												return textarea.value
+													.replace(/\r\n/g, '\r')
+													.replace(/\n/g, '\r')
+													.split('\r')
+													.map((text) => {
+														const parts = text.split(' ');
+														const id = parts[0];
+														const name = parts.slice(1).join(' ');
+														return { id, name };
+													});
+											} catch {
+												addEvent('invalid syntax for switch IDs and names');
+											}
+										})();
+										const info = switchInfo?.find((aSwitch) => aSwitch.id === switchId.toString());
+										const message = `${info ? info.name : `switch id ${switchId}`} ${
+											closed ? 'closed' : 'open'
+										}`;
 										try {
-											return textarea.value
-												.replace(/\r\n/g, '\r')
-												.replace(/\n/g, '\r')
-												.split('\r')
-												.map((text) => {
-													const parts = text.split(' ');
-													const id = parts[0];
-													const name = parts.slice(1).join(' ');
-													return { id, name };
-												});
+											// This doesn't seem to work unless it is in response to a user gesture, but maybe you can
+											//  toggle some security feature in your browser and get a spoken message when switches are hit.
+											const utter = new SpeechSynthesisUtterance(message);
+											utter.rate = 5;
+											window.speechSynthesis.cancel();
+											window.speechSynthesis.speak(utter);
 										} catch {
-											addEvent('invalid syntax for switch IDs and names');
+											// sorry, speach doesn't work for you, but you can read the log
 										}
-									})();
-									const info = switchInfo?.find((aSwitch) => aSwitch.id === switchId.toString());
-									const message = `${info ? info.name : `switch id ${switchId}`} ${
-										closed ? 'closed' : 'open'
-									}`;
-									try {
-										// This doesn't seem to work unless it is in response to a user gesture, but maybe you can
-										//  toggle some security feature in your browser and get a spoken message when switches are hit.
-										const utter = new SpeechSynthesisUtterance(message);
-										utter.rate = 5;
-										window.speechSynthesis.cancel();
-										window.speechSynthesis.speak(utter);
-									} catch {
-										// sorry, speach doesn't work for you, but you can read the log
+										addEvent(message);
 									}
-									addEvent(message);
 								}
-							}
-						});
-					},
-				})
-			);
+							});
+						},
+					})
+				);
 
-			await clear();
-			await configureHardware();
-		})();
-	}
-</script>
+				await clear();
+				await configureHardware();
+			})();
+		}
+	</script>
+</div>
